# fsdna_model_issac_li

./: .gitignore  README.md  flow_stretched_dna_explorer.ipynb  flow_stretched_dna_model.py  flow_stretched_dna_notes.md  flow_stretched_dna_params.py  pyproject.toml  requirements.txt
src/fsdna_model_issac_li/: __init__.py
